--- a/css/style.scss
+++ b/css/style.scss
@@ -91,7 +91,7 @@ body {
 
 
 
-.tm-header-cntr-1 {
+.tm-header-cont-1 {
     align-items: center;
     box-sizing: border-box;
     display: flex;
@@ -297,7 +297,7 @@ body {
 
 
 
-.tm-about-cluster-container {
+.cluster-cont-1 {
     display: flex;
     flex-direction: row;
     gap: 4rem;
@@ -394,7 +394,7 @@ body {
 }
 
 
-.div-tm-project-container {
+.cluster-cont-2 {
     display: flex;
     flex-direction: column;
     gap: 4rem;
@@ -487,7 +487,7 @@ body {
 }
 
 .cluster-btn {
-    align-self: center;
+    margin: 0 auto;
     border-radius: 1.2rem;
     padding: 1.2rem 2.4rem;
     background: 
@@ -498,4 +498,10 @@ body {
     &:hover {
         cursor: pointer;
     }  
+}
+
+
+.cluster-cont-3 {
+    display: flex;
+    flex-direction: column;
 }
